--- a/app/views/items/search.html.erb
+++ b/app/views/items/search.html.erb
@@ -1,7 +1,4 @@
-<%= form_with(url: search_items_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :keyword, placeholder: 'キーワードから探す', class: 'input-box' %>
-  <%= image_submit_tag("search.png", class: 'search-icon') %>
-<% end %>
+<%= render "shared/header" %>
 
 <div class='item-contents'>
   <h2 class='title'>ピックアップカテゴリー</h2>
@@ -13,5 +10,6 @@
   </ul>
 </div>
 
+<%= render "shared/footer" %>
 
 
